#
# This file is part of the linuxpy project
#
# Copyright (c) 2023 Tiago Coutinho
# Distributed under the GPLv3 license. See LICENSE for more info.

[project]
name = "linuxpy"
description = "Human friendly interface to linux subsystems using python"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Jose Tiago Macara Coutinho", email = "coutinhotiago@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "typing_extensions>=4.6,<5 ; python_version < '3.12'"
]
dynamic = ["version", "readme"]
keywords = ["linux", "video", "system", "midi", "gpio", "led", "input", "gamepad", "joystick", "keyboard", "mouse", "thermal", "asyncio"]

[project.urls]
Documentation = "https://tiagocoutinho.github.io/linuxpy/"
Homepage = "https://github.com/tiagocoutinho/linuxpy"
Repository = "https://github.com/tiagocoutinho/linuxpy"

[project.optional-dependencies]
dev = [
    "build>=0.10.0",
    "gevent>=21",
    "twine>=4.0.2",
    "pytest>=8.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6",
    "ruff>=0.3.0",
    "numpy>=1.1",
]
examples = [
    "flask>=2,<4",
    "fastapi<1",
    "opencv-python",
    "qtpy",
    "pyqt6",
    "gunicorn",
    "gevent",
    "uvicorn",
    "numpy",
    "Pillow",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pygments",
    "pymdown-extensions",
    "mkdocs-coverage",
]

[project.scripts]
linuxpy-codegen = "linuxpy.codegen.cli:main"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "linuxpy.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["linuxpy*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--cov=linuxpy",
    "--cov-report=html",
    "--cov-report=json",
    "--cov-report=xml",
    "--durations=10",
    "--verbose",
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


[tool.ruff]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
lint.ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.coverage.run]
omit = [
    "linuxpy/codegen/*"
]
